[package]
name = "nostr-indexer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
nostr-sdk = { version = "0.33.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }